--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://matteac.github.io/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.d14aed24764c28a12c6d45e40e3be982b000d5aaeb9db9fe483a40044fd19e97.css" integrity="sha256-0UrtJHZMKKEsbUXkDjvpgrAA1arrnbn&#43;SDpABE/Rnpc=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://matteac.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://matteac.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://matteac.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://matteac.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="https://matteac.github.io/safari-pinned-tab.svg">
+<link rel="canonical" href="https://matteac.github.io/blog/">
+<link crossorigin="anonymous" href="/blog/assets/css/stylesheet.d14aed24764c28a12c6d45e40e3be982b000d5aaeb9db9fe483a40044fd19e97.css" integrity="sha256-0UrtJHZMKKEsbUXkDjvpgrAA1arrnbn&#43;SDpABE/Rnpc=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://matteac.github.io/blog/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://matteac.github.io/blog/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://matteac.github.io/blog/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://matteac.github.io/blog/apple-touch-icon.png">
+<link rel="mask-icon" href="https://matteac.github.io/blog/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://matteac.github.io/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://matteac.github.io/blog/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -59,7 +59,7 @@
 </noscript><meta property="og:title" content="matteac" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://matteac.github.io/" />
+<meta property="og:url" content="https://matteac.github.io/blog/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="matteac"/>
@@ -70,9 +70,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "matteac",
-  "url": "https://matteac.github.io/",
+  "url": "https://matteac.github.io/blog",
   "description": "",
-  "thumbnailUrl": "https://matteac.github.io/favicon.ico",
+  "thumbnailUrl": "https://matteac.github.io/blog/favicon.ico",
   "sameAs": [
       "https://www.instagram.com/s.u.n.c.h.i.l.d/", "https://github.com/matteac"
   ]
@@ -95,7 +95,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://matteac.github.io/" accesskey="h" title="matteac (Alt + H)">matteac</a>
+            <a href="https://matteac.github.io/blog" accesskey="h" title="matteac (Alt + H)">matteac</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -121,12 +121,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://matteac.github.io/posts" title="Posts">
+                <a href="https://matteac.github.io/blog/posts" title="Posts">
                     <span>Posts</span>
                 </a>
             </li>
             <li>
-                <a href="https://matteac.github.io/about" title="About">
+                <a href="https://matteac.github.io/blog/about" title="About">
                     <span>About</span>
                 </a>
             </li>
@@ -166,7 +166,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://matteac.github.io/">matteac</a></span>
+    <span>&copy; 2022 <a href="https://matteac.github.io/blog">matteac</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
